--- a/dotnetfeatures/Components/Pages/Weather.razor
+++ b/dotnetfeatures/Components/Pages/Weather.razor
@@ -54,7 +54,7 @@ else
  // [PersistentState(RestoreBehavior =RestoreBehavior.SkipInitialValue)]
  //    [PersistentState(RestoreBehavior = RestoreBehavior.SkipLastSnapshot)]
 
- [PersistentState]
+ // [PersistentState]
 
  public WeatherForecast[]? Forecasts { get; set; }
 
